--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@fastify/cors": "^11.0.1",
+    "@fastify/env": "^5.0.2",
+    "@fastify/sensible": "^6.0.3",
     "bcrypt": "^6.0.0",
     "fastify": "^5.4.0",
     "fastify-plugin": "^5.0.1",
