--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/env": "^5.0.2",
     "@fastify/jwt": "^9.1.0",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/sensible": "^6.0.3",
+    "@fastify/static": "^8.2.0",
     "bcrypt": "^6.0.0",
     "fastify": "^5.4.0",
+    "fastify-cloudinary": "^2.0.0",
     "fastify-plugin": "^5.0.1",
     "mongoose": "^8.15.1"
   }
