--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "bcrypt": "^6.0.0",
     "fastify": "^5.4.0",
     "fastify-cloudinary": "^2.0.0",
+    "fastify-mailer": "^2.3.1",
     "fastify-plugin": "^5.0.1",
-    "mongoose": "^8.15.1"
+    "mailgen": "^2.0.29",
+    "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3"
   }
 }
