docs: finalize README with updated API routes and project details

--- a/.env.example
+++ b/.env.example
@@ -7,18 +7,35 @@ MONGODB_URI=mongodb+srv://username:password@cluster0.nyvnywq.mongodb.net
 
 
 # ################ ENV VARS TO HANDLE CORS #################
-CORS_ORIGIN = *  # add the frontend URL (more secure)
+CORS_ORIGIN=*  # add the frontend URL (more secure)
+
+
+# ################ ENV VARS TO HANDLE APP NAME #################
+APP_NAME=SocialConnect
+
+
+# ################ ENV VARS TO HANDLE CLIENT URL #################
+CLIENT_URL=http://localhost:3000
+# CORS_ORIGIN=http://localhost:3000 # This must be ("*") or comma separated origins ("https://example1.com,https://example2.com,http://localhost:3000")
+
+
+# ################ ENV VARS TO HANDLE FORGOT PASSWORD REDIRECT URL #################
+RESET_PASSWORD_REDIRECT_URL=http://localhost:3000/reset-password
 
 
 # ################ ENV VARS TO HANDLE JWT #################
 ACCESS_TOKEN_SECRET=your_access_token_secret
-ACCESS_TOKEN_EXPIRY = 1d
+ACCESS_TOKEN_EXPIRY=1d
 
 REFRESH_TOKEN_SECRET=your_refresh_token_secret
-REFRESH_TOKEN_EXPIRY = 10d
+REFRESH_TOKEN_EXPIRY=10d
 
 
-# ################ ENV VARS TO UPLOAD & DELETE FILES THROUGH CLOUDINARY #################
+# ################ ENV VARS TO HANDLE TEMPORARY TOKEN #################
+TEMPORARY_TOKEN_EXPIRY=20
+
+
+# ################ ENV VARS TO HANDLE CLOUDINARY #################
 CLOUDINARY_CLOUD_NAME=your_cloudinary_cloud_name
 CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
